<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Check-In</string>
    <string name="title_home">Check-In</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_settings">Settings</string>
    <string name="set_time">Set Time</string>
    <string name="enable_alarm">Enable Alarm</string>
    <string name="save_settings">Save Settings</string>
    <string name="alarm_enabled">Alarm enabled</string>
    <string name="alarm_disabled">Alarm Disabled</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_notification_title">Alarm</string>
    <string name="alarm_notification_text">Time to wake up!</string>
    <string name="save">Save</string>
    <string name="alarm_stopped_manually">%1$s Check-In OK at %2$s</string>
    <string name="alarm_expired">%1$s Failed to Check-In at %2$s</string>
    <string name="check_in_button_text"><![CDATA[<big><b>Manual Check-In</b></big><br><br><small>Press for 3 seconds</small>]]></string>
    <string name="emergency_button_text"><![CDATA[
        <big><font color="#CCCCCC">Emergency</font></big><br>
        <small><font color="#CCCCCC">Press 3 times in 5 sec.<br>for ON or OFF</font></small>
    ]]></string>
    <string name="add_contact">Add Contact</string>
    <string name="selected_contacts">Selected Contacts</string>
    <string name="no_contacts_selected">No contacts selected</string>
    <string name="contact_details">Contact Details</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_already_exists">Contact already exists in the list</string>
    <string name="contact_removed">Contact removed from list</string>
    <string name="tap_contact_for_details">Tap any contact to view details and remove option</string>
    <string name="contact_status">Contact Status</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
    <string name="status_emergency">Emergency</string>
    <string name="remove_contact_confirmation_title">Remove Contact</string>
    <string name="remove_contact_confirmation_message">Are you sure you want to remove %1$s from your contact list?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
</resources> 